Add video section and its overlay with gradient

--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
         </nav>
       </div>
     </header>
-    <video autoplay muted loop>
-      <source src="./assets/video/concierto.mp4" type="video/mp4" />
-    </video>
+    <div class="video">
+      <div class="overlay">
+        <div class="container content-video">
+          <h2>Rock & EDM Festival</h2>
+          <p>August 2023, Guadalajara, México.</p>
+        </div>
+      </div>
+      <video autoplay muted loop>
+        <source src="./assets/video/concierto.mp4" type="video/mp4" />
+        <source src="./assets/video/concierto.ogg" type="video/ogg" />
+        <source src="./assets/video/concierto.webm" type="video/webm" />
+      </video>
+    </div>
   </body>
 </html>
