--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <div class="video">
       <div class="overlay">
-        <div class="container content-video">
+        <div class="container video-content">
           <h2>Rock & EDM Festival</h2>
           <p>August 2023, Guadalajara, México.</p>
         </div>
