Add about-festival section
Add new color and size variables.

--- a/index.html
+++ b/index.html
@@ -37,5 +37,23 @@
         <source src="./assets/video/concierto.webm" type="video/webm" />
       </video>
     </div>
+    <section class="container about-festival">
+      <div class="image">
+        <img
+          src="./assets/img/vocalist_img.jpg"
+          alt="Vocalist singing with a Microphone"
+        />
+      </div>
+      <div class="festival-content">
+        <h2>Rock & EDM Festival</h2>
+        <p class="date-info">August 2023, Guadalajara, México.</p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum est,
+          doloribus provident ipsa expedita tenetur odit minima doloremque
+          maxime debitis nobis accusamus reiciendis, et dicta ab iure asperiores
+          eius! Quae?
+        </p>
+      </div>
+    </section>
   </body>
 </html>
