Style about festival section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="festival-content">
         <h2>Rock & EDM Festival</h2>
         <p class="date-info">August 2023, Guadalajara, México.</p>
-        <p>
+        <p class="regular-text">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum est,
           doloribus provident ipsa expedita tenetur odit minima doloremque
           maxime debitis nobis accusamus reiciendis, et dicta ab iure asperiores
